- Changes to QueryBuilder to support queries to json columns - Created ExtendEvent class to work as DTO for more complete responses - BaseInterceptor class added to extend (if needed) the functionality of event handlers - Added /events/overspeed endpoint
